StrictMode / javac Werror / illegal-operation=deny (#35)