@@ -13,3 +13,30 @@ configurations.configureEach {
 		}
 	}
 }
+
+tasks.withType<JavaCompile>().configureEach javac@{
+	this@javac.options.compilerArgs = this@javac.options.compilerArgs + listOf(
+		// Enable all warnings the compiler knows.
+		"-Xlint:all",
+		// Fail build when any warning pops up.
+		"-Werror",
+	)
+}
+
+tasks.withType<Test>().configureEach test@{
+	if (javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)
+		&& !javaVersion.isCompatibleWith(JavaVersion.VERSION_17)) { // 9 <= Java < 17
+		jvmArgs(
+			"--illegal-access=deny",
+			// PowerMock eagerly calls setAccessible on EVERYTHING 😂.
+			// > WARNING: Illegal reflective access by org.powermock.reflect.internal.WhiteboxImpl
+			// > to method java.lang.Throwable.*
+			// > to method java.lang.Integer.*
+			// > to method java.lang.String.*
+			// > to method java.lang.Object.*
+			// at org.powermock.reflect.internal.WhiteboxImpl.doGetAllMethods(WhiteboxImpl.java:1508)
+			"--add-opens=java.base/java.lang=ALL-UNNAMED",
+			"--add-opens=java.base/java.util=ALL-UNNAMED",
+		)
+	}
+}
